--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <li>🤷🏻 Не зацикливаемся на реализации, смотрим возможности</li>
       </ul> 
     </section>
-    <section id="" class="slide label-header rbn bg3">
+    <!-- <section id="" class="slide label-header rbn bg3">
       <h2 class="shout shrink">Многие компании движутся<br>к автоматизации</h2>
-    </section>
+    </section> -->
     <section id="" class="slide label-header rbn bg11">
       <div class="cover-container place c">
       <img src="pictures/stories.jpeg" class="cover w"/>
@@ -76,7 +76,7 @@
         <video src="pictures/nadzor.mov" autoplay="" loop="" muted="" playsinline="" class="cover w"></video>
       </div>
     </section>
-    <section id="" class="slide label-header rbn bg bg16">
+    <!-- <section id="" class="slide label-header rbn bg bg16">
       <h2>Что хотят предложить?</h2>
       <ul class="nosign">
         <li class="next">📨 Суммаризация писем</li>
@@ -84,12 +84,8 @@
         <li class="next">📝 Автопротоколирование</li>
         <li class="next">💼 Авторешения</li>
       </ul>
-    </section>
-    <section id="" class="slide label-header rbn bg11">
-      <div class="cover-container place c">
-      <img src="pictures/boss.jpg" class="cover w"/>
-      </div>
-    </section>
+    </section> -->
+    
     <section id="" class="slide label-header rbn bg9">
       <h2 class="shout shrink">Как самому это сделать?</h2>
     </section>
@@ -172,12 +168,12 @@
     <section id="" class="slide label-header rbn bg4">
       <img src="pictures/interview-swift.png" class="cover h bordered"/>
     </section>
-    <section id="" class="slide label-header rbn bg15">
+    <!-- <section id="" class="slide label-header rbn bg15">
       <h2 class="shout shrink">Не мог придумать<br>кейсы для лидов</h2>
     </section>
     <section id="" class="slide label-header rbn bg4">
       <img src="pictures/interview-lead.png" class="cover h bordered"/>
-    </section>
+    </section> -->
     <section id="" class="slide label-header rbn bg16">
       <h2 class="shout shrink">Но можно и интереснее</h2>
     </section>
@@ -189,6 +185,9 @@
         <li class="next">Вбиваем вопрос в LLM</li>
         <li class="next">Беседуем о том, как можно улучшить ответ</li>
       </ol>
+    </section>
+    <section id="" class="slide label-header rbn bg11">
+      <img src="pictures/gigachat.jpeg" class="cover h bordered"/>
     </section>
     <section id="" class="slide label-header rbn bg3">
       <h2 class="shout shrink">А как проверить?</h2>
@@ -213,7 +212,7 @@
       <h2>Ответить руководителю «без дичи»</h2>
       <img src="pictures/listening.png" class="cover h bordered"/>
     </section>
-    <section id="" class="slide label-header rbn bg14">
+    <!-- <section id="" class="slide label-header rbn bg14">
       <h2 class="shout shrink">Иногда пишут иностранные вендоры</h2>
     </section>
     <section id="" class="slide label-header rbn bg11">
@@ -226,7 +225,7 @@
       <div class="cover-container place c">
       <img src="pictures/grammarly.png" class="cover h"/>
       </div>
-    </section>
+    </section> -->
     <section id="" class="slide label-header rbn bg15">
       <h2 class="shout shrink">Решение сложной проблемы</h2>
     </section>
@@ -324,9 +323,9 @@
       <video src="pictures/frankov.mp4" autoplay="" loop="" muted="" playsinline="" class="cover h bordered"></video>
       <img src="pictures/qr-frankov.png" class="place c next" style="height: 70%" />
     </section>
-    <section id="" class="slide label-header rbn bg11">
+    <!-- <section id="" class="slide label-header rbn bg11">
       <img src="pictures/fw148-yt.png" class="cover h bordered"/>
-    </section>
+    </section> -->
     <section id="" class="slide label-header rbn bg3">
       <h2 class="shout shrink">Минусы</h2>
     </section>
@@ -421,7 +420,7 @@
       </div>
       <img src="pictures/qr-audio.png" class="next place c" width="40%">
     </section>
-    <section id="" class="slide label-header rbn">
+    <section id="" class="slide label-header rbn clear">
       <img src="pictures/ai-workflow.jpg" class="cover w"/>
     </section>
     <section id="" class="slide label-header rbn bg11">
@@ -448,7 +447,15 @@
         <li class="next">🧠 Нельзя забывать самим думать</li>
       </ul>
     </section>
+    <section id="" class="slide label-header rbn bg15">
+      <h2 class="shout shrink">Авторешения</h2>
+    </section>
     <section id="" class="slide label-header rbn bg11">
+      <div class="cover-container place c">
+      <img src="pictures/boss.jpg" class="cover w"/>
+      </div>
+    </section>
+    <!-- <section id="" class="slide label-header rbn bg11">
       <div class="cover-container place c" style="background-color: white;">
       <img src="pictures/calendar.jpeg" class="cover w"/>
       </div>
@@ -483,7 +490,7 @@
       <div class="cover-container place c">
       <img src="pictures/calendar-real.png" class="cover w place t">
       </div>
-    </section>
+    </section> -->
     <section id="" class="slide label-header rbn bg9">
       <h2 class="shout shrink">Хорошо ли, когда почти<br>ничего не&nbsp;осталось?</h2>
     </section>
