--- a/index.html
+++ b/index.html
@@ -410,6 +410,9 @@
       </ol>
       <img src="pictures/pain.jpg" class="place r bordered" style="margin-right: 45px">
     </section>
+    <section id="" class="slide label-header rbn bg11">
+      <img src="pictures/heygen.jpg" class="cover h bordered">
+    </section>
     <section id="" class="slide label-header rbn bg16">
       <h2 class="shout shrink">Взгляд в будущее</h2>
     </section>
